complete guards/auth/authentication.guard.ts
Signed-off-by: ahmad ade rozak <ahmadrozak@versatech.co.id>

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,3 +1,6 @@
 ion-content{
-  --ion-background-color: white;
+  --padding-top: 40%;
+  --padding-start: 10%;
+  --padding-end: 10%;
+  --background: url('https://www.asuransiku.id/asuransiku-id-pro/agen.ea1012020b4c07e8.jpg') 0 0/100% 100% no-repeat;
 }
