--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,21 +1,23 @@
-<!--<ion-header [translucent]="true">-->
-<!--  <ion-toolbar>-->
-<!--    <ion-title>login</ion-title>-->
-<!--  </ion-toolbar>-->
-<!--</ion-header>-->
+<ion-content>
+  <div class="alert alert-light shadow-sm font-weight-bold mx-2 my-2">ASURANSIKU.id PRO</div>
+  <form (submit)="login()" [formGroup]="credentials">
+    <ion-item class="my-1 rounded-lg font-weight-bold">
+      <ion-input type="email" placeholder="Your Valid Email" formControlName="email"></ion-input>
+    </ion-item>
 
-<!--<div class="container-fluid">-->
-<div style="padding: 0; margin: 0; background-color: blue; height: 100vh; width: 100vw">
-  <ion-content>
-    <!--  <ion-header collapse="condense">-->
-    <!--    <ion-toolbar>-->
-    <!--      <ion-title size="large">login</ion-title>-->
-    <!--    </ion-toolbar>-->
-    <!--  </ion-header>-->
-    <div class="alert alert-light shadow-sm font-weight-bold mx-2 my-2">ASURANSIKU.id PRO</div>
-    <div class="card-header">Login</div>
-    <div (click)="login()" class="btn btn-block btn-primary">Login</div>
-  </ion-content>
-</div>
-<!--</div>-->
+    <div class="my-1 text-center bg-danger text-white" *ngIf="(email?.dirty || email?.touched) && email?.errors">
+      <span *ngIf="email?.errors">Email is invalid</span>
+    </div>
+
+    <ion-item class="my-1 rounded-lg font-weight-bold">
+      <ion-input type="password" placeholder="Your Valid Password" formControlName="password"></ion-input>
+    </ion-item>
+
+    <div class="my-1 text-center bg-danger text-white" *ngIf="(password?.dirty || password?.touched) && password?.errors">
+      <span *ngIf="password?.errors">Password is invalid</span>
+    </div>
+
+    <ion-button type="submit" expand="block" style="margin-top: 1rem;" [disabled]="!credentials.valid">Login</ion-button>
+  </form>
+</ion-content>
 
