--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,9 @@
 @import "@ionic/angular/css/flex-utils.css";
 
 @import "bootstrap/scss/bootstrap";
+
+body {
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
