--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -1,10 +1,11 @@
-<ion-header class="ion-no-border ion-padding-top ion-padding-bottom">
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <app-topbar></app-topbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
 
 
 </ion-content>
