solve loading lama
Signed-off-by: ahmad ade rozak <ahmadrozak@versatech.co.id>

--- a/src/app/components/navigation/topbar/topbar.component.html
+++ b/src/app/components/navigation/topbar/topbar.component.html
@@ -7,8 +7,11 @@
     </div>
   </div>
   <div class="notification-bar ion-activatable ripple-parent">
+    <div class="ml-1">
+    <app-notif-bagde [notification_total]="push_notification"></app-notif-bagde>
+    </div>
     <ion-ripple-effect></ion-ripple-effect>
-    <img src="../../../../assets/core/notif.svg" alt="user_button">
+    <img src="assets/core/notif.svg" alt="user_button">
   </div>
 </div>
 
