--- a/src/app/pages/base/base.page.html
+++ b/src/app/pages/base/base.page.html
@@ -17,10 +17,9 @@
     </div>
 
     <div class="tabs-btn">
-      <!--        <div class="cart-notification">-->
-      <!--          <div class="quotation">99</div>-->
-      <!--        </div>-->
-<!--      <app-notification-->
+      <div class="ml-3">
+      <app-notif-bagde [notification_total]="cart_notification"></app-notif-bagde>
+      </div>
       <app-bottombar
         route_tabs="cart"
         route_name="Cart"
